# panopticon-live

./: .env.example  .gitattributes  .gitignore  CAPCUT_TUTORIAL.html  CLAUDE.md  FORANDREW.md  HANDOFF_2026-04-25.md  LICENSE  MEMORY.md  README.md  SUNDAY_PLAN_2026-04-26.md  TOOLS_IMPACT.md  pyproject.toml  requirements-local.txt  requirements-prod.txt  run_golden_data.sh  vercel.json
.claude/: ecc-tools.json  identity.json  settings.json
.claude/agents/: biomech-signal-architect.md  chief-strategist.md  cv-pipeline-engineer.md  data-integrity-guard.md  demo-director.md  documentation-librarian.md  homography-geometry-specialist.md  hud-auteur-frontend.md  mps-performance-engineer.md  opus-coach-architect.md  test-forensic-validator.md  vercel-deployment-specialist.md  video-frame-validator.md
.codex/: AGENTS.md
.github/workflows/: claude.yml
backend/: __init__.py  config.py  precompute.py
backend/agents/: __init__.py  haiku_narrator.py  hud_designer.py  opus_coach.py  scouting_committee.py  system_prompt.py  tools.py
backend/cv/: __init__.py  compiler.py  homography.py  kalman.py  pose.py  state_machine.py  temporal_signals.py  thresholds.py
backend/db/: __init__.py  schema.py  setup.py  writer.py
backend/scripts/: run_vision_pass.py
dashboard/: package.json  vercel.json  vitest.config.ts
data/match_data_backups/: utr_01_segment_a.json.bak.pre-ground-truth-sync
demo-presentation/: CLAUDE.md  CUSTOM_DOMAIN_SETUP.md  PLAN.md
demo-presentation/assets/: git_timeline.txt
demo-presentation/remotion/: README.md  package.json
demo-presentation/scripts/: capcut_assembly_workflow.md  davinci_composite_workflow.md  ground_truth_sync_plan.md  intro_typing_script.md  narration_overlays.md  submission_summary.md  title_card_specs.md  voiceover_script.md
docs/: DEMO_STORYBOARD.md  ORCHESTRATION_PLAYBOOK.md  PHASE_1_PLAN.md  PHASE_4_TEAM_LEAD_HANDOFF.md  PHASE_6_TEAM_LEAD_HANDOFF.md  RECORDING_LAG_RECIPE.md  RESUME.md  SUBMISSION_SUMMARY.md  VERCEL_DEPLOYMENT.md  deferred_ideas.md
scripts/: build_card_03_closing.py  expand_agent_trace.py  probe_clip.py  sync_match_data_to_ground_truth.py
tests/: conftest.py
tests/test_agents/: test_haiku_narrator.py  test_hud_designer.py  test_opus_coach.py  test_scouting_committee.py  test_tools.py
tests/test_cv/: test_feature_compiler_end_to_end.py  test_homography.py  test_kalman.py  test_kalman_rts.py  test_pose.py  test_precompute.py  test_precompute_agent_phase.py  test_precompute_corners_json.py  test_signal_baseline_retreat.py  test_signal_crouch_depth.py  test_signals_base.py  (+8 more)
tools/: court_annotator.html
(+105 files in other folders)
