[project]
name = "panopticon-live"
version = "0.1.0"
description = "2K-Sports HUD for pro tennis, powered by Claude Opus 4.7. Built for the Anthropic x Cerebral Valley hackathon, April 2026."
authors = [{ name = "Andrew Diaz", email = "adiazufgator@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Video",
  "Topic :: Scientific/Engineering :: Image Recognition",
]

# Panopticon Live uses bifurcated requirements to stay under Vercel's 250MB serverless limit.
# - requirements-local.txt: full CV/ML deps for Mac Mini pre-compute
# - requirements-prod.txt : lean API-only deps for Vercel deploy
# This pyproject declares the UNION for IDE autocomplete; actual installs go via the txt files.
dependencies = []

[project.optional-dependencies]
local = [
  "torch>=2.8.0",
  "ultralytics>=8.3.0",
  "opencv-python-headless>=4.10.0",
  "filterpy>=1.4.5",
  "scipy>=1.14.0",
  "numpy>=1.26.0",
  "duckdb>=1.0.0",
  "pydantic>=2.9.0",
  "anthropic>=0.40.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9",
  "psutil>=5.9.0",
]

prod = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "anthropic>=0.40.0",
  "duckdb>=1.0.0",
  "pydantic>=2.9.0",
  "httpx>=0.27.0",
]

dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.7.0",
  "mypy>=1.11.0",
  "types-psutil",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"

[tool.coverage.run]
source = ["backend"]
omit = ["backend/api/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N806"]  # W, H / x, y idiomatic CV variable names in tests
"backend/cv/homography.py" = ["N806"]  # W, H / x_m, y_m physical-notation naming

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_unused_configs = true
